kustomize/apm-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: apm-server
  name: apm-server
spec:
  ports:
  - name: "8200"
    port: 8200
    targetPort: 8200
  selector:
    io.kompose.service: apm-server
status:
  loadBalancer: {}
