kustomize/elastic-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: elastic
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/elastic: "true"
  podSelector:
    matchLabels:
      io.kompose.network/elastic: "true"
